--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -28,13 +28,8 @@
 
 <!--Angular-->
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.js"></script>
 
-<!--local links-->
-<!--main css style sheet-->
-<link rel="stylesheet" href="./css/style.css">
-
-<!--link to main js page-->
-<script type="text/javascript" src="js/main.js"></script>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -61,11 +56,11 @@
      <div class="container-fluid">
         
          <div class="row">
-            <div class="col-xs-6 text-center" onclick="location.href = 'index.html'" style="border-right:2px solid #E7E7E7;">
+            <div class="col-xs-6 text-center" onclick="location.href = '#/'" style="border-right:2px solid #E7E7E7;">
                <i class="fa fa-home fa-3x"></i>
             </div>
 
-            <div class="col-xs-6 text-center" onclick="location.href = 'pages/cart.html'">
+            <div class="col-xs-6 text-center" onclick="location.href = '#cart'">
                <i class="fa fa-shopping-cart fa-3x"></i>
             </div>
          </div>
@@ -174,6 +169,8 @@
         </div>
       </div>
 
+      <!--placeholder for routed content -->
+      <div ng-view></div>
 
    <!--content container-->
    </div>
@@ -195,7 +192,12 @@
 
 </div>
 
+<!--local links-->
+<link rel="stylesheet" href="./css/style.css">
+<script type="text/javascript" src="js/main.js"></script>
+<script type="text/javascript" src="js/pages.js"></script>
 </body>
+
 </html>
 
 
