--- a/www/index.html
+++ b/www/index.html
@@ -45,17 +45,10 @@
    <!--main page content area-->
    <div class="container conMar">
 
-      <div class="well">
-
-         <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#moreInfo">Open Modal</button>
-
-      </div>
-
       <!--placeholder for routed content -->
       <div ng-view></div>
-      <div ng-include="'pages/modal.html'"></div>
 
-   <!--content container-->
+   <!--content contait ner-->
    </div>
 
    <!--the footer nav bar-->
