--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -10,46 +10,21 @@
 <meta name="msapplication-tap-highlight" content="no" />
 <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
 
-
-<!--jquery cdn-->
 <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-
-<!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-<!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-<!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
-<!--font awesome cdn-->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-<!--Angular-->
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.js"></script>
 
-
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<!--my styles-->
+<link rel="stylesheet" href="./css/style.css">
 
 </head>
 <body>
 
-<style>
-
-/*div{
-   border:1px solid red;
-}*/
-
-
-/*div{
-   border:1px solid red;
-}*/
-
-
-</style>
-
+<!--top navbar-->
 <div class="container-fluid" ng-app="myApp">
 
    <nav class="navbar navbar-default navbar-fixed-top navPad" style="margin-top:25px;">
@@ -64,26 +39,16 @@
                <i class="fa fa-shopping-cart fa-3x"></i>
             </a>
          </div>
-
-
-
      </div>
    </nav>
 
    <!--main page content area-->
    <div class="container conMar">
 
-      <div class="well">
-
-         <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#moreInfo">Open Modal</button>
-
-      </div>
-
       <!--placeholder for routed content -->
       <div ng-view></div>
-      <div ng-include="'pages/modal.html'"></div>
 
-   <!--content container-->
+   <!--content contait ner-->
    </div>
 
    <!--the footer nav bar-->
@@ -104,11 +69,10 @@
 </div>
 
 <!--local links-->
-<link rel="stylesheet" href="./css/style.css">
-<script type="text/javascript" src="js/main.js"></script>
+<script type="text/javascript" src="js/app.js"></script>
+<script type="text/javascript" src="js/controller.js"></script>
+<script type="text/javascript" src="js/directives.js"></script>
+
 </body>
 
 </html>
-
-
-
