--- a/www/pages/main.html
+++ b/www/pages/main.html
@@ -1,1 +1,38 @@
-<h1>MAIN</h1>
+<a href="#/popular">
+<div class="well">
+   <div class="row">
+      <div class="col-xs-6 text-center">
+         <h1>Popular Drinks</h1>
+      </div>				
+      <div class="col-xs-6 text-center">					
+         <img src="img/mixed.png" />
+      </div>
+   </div>
+</div>
+</a>
+
+<a href="#/beers">
+<div class="well">
+   <div class="row">
+      <div class="col-xs-6 text-center">
+         <h1>Beer</h1>
+      </div>
+      <div class="col-xs-6 text-center">
+         <img src="img/beer.png"/>
+      </div>
+   </div>
+</div>
+</a>
+
+<a href="#/mixed">
+<div class="well">
+   <div class="row">
+      <div class="col-xs-6 text-center">
+         <h1>Mixed Drinks</h1>
+      </div>
+      <div class="col-xs-6 text-center">
+         <img src="img/mixed_1.png"/>
+      </div>
+   </div>
+</div>
+</a>
