--- a/www/pages/mixed.html
+++ b/www/pages/mixed.html
@@ -1,1 +1,7 @@
-<h1>Mixed</h1>
+<div class="well wellPad" ng-repeat="drink in drinks" ng-if="drink.category=='mixed'">
+
+   <!--includes the selection parts for drinks parts-->
+   <div ng-include="'pages/drinkSelection.html'"></div>  
+
+</div>
+
