cart functionality added

--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -21,15 +21,16 @@
 <!--my styles-->
 <link rel="stylesheet" href="./css/style.css">
 
+
 </head>
 <body>
 
 <!--top navbar-->
 <div class="container-fluid" ng-app="myApp">
 
-   <nav class="navbar navbar-default navbar-fixed-top navPad" style="margin-top:25px;">
+   <nav class="navbar navbar-default navbar-fixed-top navPad" style="padding-top:25px;">
      <div class="container-fluid">
-        
+
          <div class="row">
             <a href="#/" class="col-xs-6 text-center" style="border-right:2px solid #E7E7E7;">
                <i class="fa fa-home fa-3x"></i>
@@ -54,7 +55,7 @@
    <!--the footer nav bar-->
    <nav class="navbar navbar-default navbar-fixed-bottom navPad">
      <div class="container-fluid">
-        
+
          <div class="row">
             <a class="col-xs-12 text-center" back-button>
                <i class="fa fa-mail-reply fa-3x"></i>
@@ -70,6 +71,7 @@
 
 <!--local links-->
 <script type="text/javascript" src="js/app.js"></script>
+<script type="text/javascript" src="js/service.js"></script>
 <script type="text/javascript" src="js/controller.js"></script>
 <script type="text/javascript" src="js/directives.js"></script>
 
