--- a/platforms/browser/www/pages/cart.html
+++ b/platforms/browser/www/pages/cart.html
@@ -1,2 +1,51 @@
-<h1>Cart</h1>
-<a href="#/beers">Test</A>
+<div class="well" ng-repeat="drink in cartItems">
+
+   <div class="container">
+
+      <div class="row">
+
+         <div class="col-xs-6 text-center">
+            <h1>{{drink.name}}</h1>
+         </div>
+
+         <div class="col-xs-6 text-center">
+            <br/>
+            <button type="button" class="btn btn-lg btn-primary">-</button>
+            <span class="label label-default" style="font-size:25px;">7</span>
+            <button type="button" class="btn btn-lg btn-primary">+</button>
+         </div>
+      </div>
+
+      <div class="row">
+         <div class="col-xs-6 text-center">
+            <h3><span class="label label-default">$ {{drink.price}}</span></h3>
+         </div>
+
+         <div class="col-xs-6 text-center">
+            <br/>
+            <button type="button" class="btn btn-md btn-primary">More Info</button>
+
+         </div>
+      </div>
+
+   </div>
+
+</div>
+
+
+<div class="container-fluid totalSec">
+
+   <div class="row">
+      <div class="col-xs-7 text-center">
+         <h3><span class="label label-default">Total: $9.99</span>
+         <span class="label label-default">SubTotal: $8.47</span></h3>
+      </div>
+
+      <div class="col-xs-5 text-center">
+         <br/>
+         <button type="button" class="btn btn-primary">Check-Out</button>
+      </div>
+   </div>
+
+</div>
+
