--- a/platforms/browser/www/pages/mixed.html
+++ b/platforms/browser/www/pages/mixed.html
@@ -1,3 +1,6 @@
+<!--includes the modal-->
+<div ng-include="'pages/modal.html'"></div>
+
 <div class="well" ng-repeat="drink in drinks" ng-if="drink.category=='mixed'">
 
    <!--includes the selection parts for drinks parts-->
