--- a/www/pages/cart.html
+++ b/www/pages/cart.html
@@ -10,9 +10,9 @@
 
          <div class="col-xs-6 text-center">
             <br/>
-            <button type="button" class="btn btn-lg btn-primary">-</button>
-            <span class="label label-default" style="font-size:25px;">7</span>
-            <button type="button" class="btn btn-lg btn-primary">+</button>
+            <button type="button" class="btn btn-lg btn-primary" ng-click="drink.number = drink.number - 1">-</button>
+            <span class="label label-default" style="font-size:25px;">{{drink.number}}</span>
+            <button type="button" class="btn btn-lg btn-primary" ng-click="drink.number = drink.number + 1">+</button>
          </div>
       </div>
 
@@ -43,7 +43,7 @@
 
       <div class="col-xs-5 text-center">
          <br/>
-         <button type="button" class="btn btn-primary">Check-Out</button>
+         <button type="button" class="btn btn-md btn-primary">Check-Out</button>
       </div>
    </div>
 
