--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -57,9 +57,13 @@
      <div class="container-fluid">
 
          <div class="row">
-            <a class="col-xs-12 text-center" back-button>
+            <a class="col-xs-6 text-center" back-button style="border-right:2px solid #E7E7E7;">
                <i class="fa fa-mail-reply fa-3x"></i>
             </a>
+            <a href="#/search" class="col-xs-6 text-center">
+               <i class="fa fa-search fa-3x"></i>
+            </a>
+
          </div>
 
      </div>
