--- a/platforms/browser/www/pages/drinkSelection.html
+++ b/platforms/browser/www/pages/drinkSelection.html
@@ -13,7 +13,7 @@
       <br/>
    </div>
 
-   <div class="text-center col-xs-6"><img src=""/></div>
+   <div class="text-center col-xs-6"><img src="{{drink.image}}"/></div>
 
 </div>
 
