--- a/platforms/browser/www/pages/main.html
+++ b/platforms/browser/www/pages/main.html
@@ -31,7 +31,7 @@
          <h1>Mixed Drinks</h1>
       </div>
       <div class="col-xs-6 text-center">
-         <img src="img/mixed_1.png"/>
+         <img src="img/cocktail.png"/>
       </div>
    </div>
 </div>
