--- a/platforms/browser/www/pages/cart.html
+++ b/platforms/browser/www/pages/cart.html
@@ -28,6 +28,8 @@
          </div>
       </div>
 
+
+
    </div>
 
 </div>
@@ -43,9 +45,36 @@
 
       <div class="col-xs-5 text-center">
          <br/>
-         <button type="button" class="btn btn-md btn-primary">Check-Out</button>
+         <button type="button" class="btn btn-md btn-primary" data-toggle="modal" data-target="#checkoutModal">Check-Out</button>
       </div>
    </div>
 
+</div>
+
+
+
+<div class="modal fade" id="checkoutModal" role="dialog">
+
+   <div class="modal-dialog">
+
+      <div class="modal-content">
+
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">Payment</h4>
+        </div>
+
+        <div class="modal-body text-center">
+           <button type="button" class="btn btn-lg btn-primary">Cash</button>
+           <button type="button" class="btn btn-lg btn-primary">Debit/Credit</button>
+        </div>
+
+        <div class="modal-footer">
+
+        </div>
+
+      </div>
+
+   </div>
 </div>
 
