--- a/www/pages/modal.html
+++ b/www/pages/modal.html
@@ -21,7 +21,7 @@
             </div>
 
             <div class="col-sm-6 text-center">
-               <img src="img/placeholder.png" class="img-resposive" height="200px" width="200px">
+               <img src="img/mixed.png" class="img-resposive" height="200px" width="200px">
             </div>
 
          </div>
