--- a/platforms/browser/www/pages/cart.html
+++ b/platforms/browser/www/pages/cart.html
@@ -1,3 +1,5 @@
+<div ng-include="'pages/modal.html'"></div>
+
 <div class="well" ng-repeat="drink in cartItems">
 
    <div class="container">
@@ -23,7 +25,7 @@
 
          <div class="col-xs-6 text-center">
             <br/>
-            <button type="button" class="btn btn-md btn-primary">More Info</button>
+            <button type="button" class="btn btn-md btn-primary" data-toggle="modal" data-target="#moreInfo">More Info</button>
 
          </div>
       </div>
