--- a/platforms/browser/www/pages/cart.html
+++ b/platforms/browser/www/pages/cart.html
@@ -6,11 +6,11 @@
 
       <div class="row">
 
-         <div class="col-xs-6 text-center">
+         <div class="col-sm-6 text-center">
             <h1>{{drink.name}}</h1>
          </div>
 
-         <div class="col-xs-6 text-center">
+         <div class="col-sm-6 text-center">
             <br/>
             <button type="button" class="btn btn-lg btn-primary" ng-click="drink.number = drink.number - 1">-</button>
             <span class="label label-default" style="font-size:25px;">{{drink.number}}</span>
@@ -19,11 +19,11 @@
       </div>
 
       <div class="row">
-         <div class="col-xs-6 text-center">
+         <div class="col-sm-6 text-center">
             <h3><span class="label label-default">$ {{drink.price}}</span></h3>
          </div>
 
-         <div class="col-xs-6 text-center">
+         <div class="col-sm-6 text-center">
             <br/>
             <button type="button" class="btn btn-md btn-primary" data-toggle="modal" data-target="#moreInfo">More Info</button>
 
@@ -40,12 +40,12 @@
 <div class="container-fluid totalSec">
 
    <div class="row">
-      <div class="col-xs-7 text-center">
+      <div class="col-sm-7 text-center">
          <h3><span class="label label-default">Total: $9.99</span>
          <span class="label label-default">SubTotal: $8.47</span></h3>
       </div>
 
-      <div class="col-xs-5 text-center">
+      <div class="col-sm-5 text-center">
          <br/>
          <button type="button" class="btn btn-md btn-primary" data-toggle="modal" data-target="#checkoutModal">Check-Out</button>
       </div>
