--- a/platforms/browser/www/pages/cart.html
+++ b/platforms/browser/www/pages/cart.html
@@ -11,17 +11,16 @@
          </div>
 
          <div class="col-sm-6 text-center">
-            <br/>
-            <button type="button" class="btn btn-lg btn-primary" ng-click="drink.number = drink.number - 1">-</button>
-            <span class="label label-default" style="font-size:25px;">{{drink.number}}</span>
-            <button type="button" class="btn btn-lg btn-primary" ng-click="drink.number = drink.number + 1">+</button>
-         </div>
-      </div>
-
-      <div class="row">
-         <div class="col-sm-6 text-center">
             <h3><span class="label label-default">$ {{drink.price}}</span></h3>
          </div>
+
+         <div class="col-sm-6 text-center">
+            <br/>
+            <button type="button" class="btn btn-lg btn-primary vcenter" ng-click="drink.number = drink.number - 1">-</button>
+            <span class="label label-default vcenter" style="font-size:30px;">{{drink.number}}</span>
+            <button type="button" class="btn btn-lg btn-primary vcenter" ng-click="drink.number = drink.number + 1">+</button>
+         </div>
+
 
          <div class="col-sm-6 text-center">
             <br/>
