--- a/www/pages/drinkSelection.html
+++ b/www/pages/drinkSelection.html
@@ -22,10 +22,10 @@
 </div>
 
 <div class="row">
-   <div class="col-sm-4 text-center" style="margin-bottom:10px; margin-top:35px;">
-       <button type="button" class="btn btn-lg btn-primary" ng-click="drink.number = drink.number - 1">-</button>
-       <span class="label label-default" style="font-size:25px;">{{drink.number}}</span>
-       <button type="button" class="btn btn-lg btn-primary" ng-click="drink.number = drink.number + 1">+</button>
+   <div class="col-sm-4 text-center imgMargin" style="margin-bottom:10px;">
+       <button type="button" class="btn btn-lg btn-primary vcenter" ng-click="drink.number = drink.number - 1">-</button>
+       <span class="label label-default vcenter" style="font-size:30px;">{{drink.number}}</span>
+       <button type="button" class="btn btn-lg btn-primary vcenter" ng-click="drink.number = drink.number + 1">+</button>
    </div>
    <div class="col-sm-4 text-center" style="margin-bottom:10px;">
        <button type="button" class="btn btn-lg btn-primary" ng-click="cartService.addToCart(drink)" data-toggle="collapse" data-target="#cartAlert{{$index}}">Add To Cart</button>
